# src/routes/craft.routes.ts
@@ -1,11 +1,23 @@
+import {
+  addCraftHandler,
+  deleteCraftHandler,
+  getCraftHandler,
+  updateCraftHandler,
+} from "../controllers/crafts/crafts.controller";
+import {
+  postCraftSchema,
+  putCraftSchema,
+} from "../validation/crafts.schema.validation";
+
 import express from "express";
+import { validateBody } from "../middleware/validate.body";
+
 const router = express.Router();
-const Controllers = require("../controllers/index.controller");
 
 //routes for craft data
-router.post("/craft", Controllers.addCraftController);
-router.delete("/craft/:craftId", Controllers.deleteCraftController);
-router.put("/craft/:craftId", Controllers.updateCraftController);
-router.get("/craft", Controllers.getCraftController);
+router.post("/craft", validateBody(postCraftSchema), addCraftHandler);
+router.delete("/craft/:craftId", deleteCraftHandler);
+router.put("/craft/:craftId", validateBody(putCraftSchema), updateCraftHandler);
+router.get("/craft", getCraftHandler);
 
-export = router;
+export default router;
